// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure"
  role="button"
  tabindex="0"
>
  Toggle
</div>
`;

exports[`composition hook should return with Modal.Disclosure props 1`] = `
Object {
  "aria-controls": "test",
  "aria-disabled": undefined,
  "aria-expanded": false,
  "aria-haspopup": "dialog",
  "className": "css-13h683e css-1pwrqjj css-3ekj6a fp-Box fp-ModalDisclosure",
  "disabled": undefined,
  "onClick": [Function],
  "onKeyDown": [Function],
  "onMouseDown": [Function],
  "ref": [Function],
  "role": "button",
  "style": undefined,
  "tabIndex": undefined,
  "type": undefined,
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure"
  role="button"
  tabindex="0"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 red fp-Box fp-ModalDisclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`overrides Modal.Disclosure.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: red;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`props should assign a ref 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly when disabled is set 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-disabled="true"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure"
  disabled=""
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly when focusable is set 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-disabled="true"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`theming Modal.Disclosure.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: red;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-ModalDisclosure"
  type="button"
>
  Toggle
</button>
`;
